# openshift-versions

./: .gitignore  CNAME  README.md  build.sh  index.html  prueba.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  versions.py
.github/workflows/: flake8.yml  greetings.yml  pre-commit.yml  runpublish.yml
content/: CNAME
openshift_versions/cmd/: versions.py
openshift_versions/cmd/templates/: index.template
templates/: index.template
