[metadata]
name = openshift_versions
summary = Run the python script to generate an html page with the list of the latest OpenShift 4 versions.
description-file =
    README.md
author = Eduardo Minguez
author-email = edu@redhat.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[entry_points]
console_scripts =
    openshift-versions = openshift_versions.cmd.versions:main

[files]
packages =
    openshift_versions
